# vald

./: .all-contributorsrc  .coderabbit.yaml  .commit_template  .cspell.json  .curlrc  .deepsource.toml  .fossa.yml  .gitattributes  .gitfiles  .gitguardian.yaml  .gitignore  .gitmodules  .golangci.json  .golangci.yml  .htaccess  .prh.yaml  .semgrepignore  .textlintrc  .yamlfmt  404.html  AGENTS.md  AUTHORS  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  DEVELOPMENT.md  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  authors  buf.gen.doc.yaml  buf.gen.yaml  buf.work.yaml  buf.yaml  checkmake.ini  (+24 more)
.dependabot/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  postAttachCommand.sh
.github/: CHATOPS_OWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  chatops_commands.md  chatops_permissions.yaml  conflint.yaml  dependabot.yml  ghalint.yaml  issue_label_bot.yaml  kubelinter.yaml  labeler.yaml  labeler.yml
CHANGELOG/: CHANGELOG-0.0.md  CHANGELOG-1.0.md  CHANGELOG-1.1.md  CHANGELOG-1.2.md  CHANGELOG-1.3.md  CHANGELOG-1.4.md  CHANGELOG-1.5.md  CHANGELOG-1.6.md  CHANGELOG-1.7.md  README.md
Makefile.d/: actions.mk  bench.mk  build.mk  client.mk  dependencies.mk  docker.mk  e2e.mk  format.mk  functions.mk  generate.mk  git.mk  helm.mk  k0s.mk  k3d.mk  k8s.mk  kind.mk  lint.mk  minikube.mk  ml.mk  proto.mk  test.mk  tls.mk  tools.mk  version.mk
apis/: go.mod  go.sum
assets/: Untitled Diagram.drawio  Vald Architecture Overview.drawio
categories/: index.html  index.xml
charts/: index.html  index.yaml  vald-0.1.0.tgz  vald-benchmark-operator-v1.7.12.tgz  vald-benchmark-operator-v1.7.13.tgz  vald-benchmark-operator-v1.7.14.tgz  vald-benchmark-operator-v1.7.15.tgz  vald-benchmark-operator-v1.7.16.tgz  vald-benchmark-operator-v1.7.17.tgz  vald-helm-operator-v0.0.26.tgz  vald-helm-operator-v0.0.27.tgz  vald-helm-operator-v0.0.28.tgz  vald-helm-operator-v0.0.29.tgz  vald-helm-operator-v0.0.30.tgz  vald-helm-operator-v0.0.31.tgz  vald-helm-operator-v0.0.32.tgz  vald-helm-operator-v0.0.33.tgz  vald-helm-operator-v0.0.34.tgz  vald-helm-operator-v0.0.35.tgz  vald-helm-operator-v0.0.36.tgz  vald-helm-operator-v0.0.37.tgz  vald-helm-operator-v0.0.38.tgz  vald-helm-operator-v0.0.39.tgz  vald-helm-operator-v0.0.40.tgz  vald-helm-operator-v0.0.41.tgz  vald-helm-operator-v0.0.42.tgz  vald-helm-operator-v0.0.43.tgz  vald-helm-operator-v0.0.44.tgz  vald-helm-operator-v0.0.45.tgz  vald-helm-operator-v0.0.46.tgz  vald-helm-operator-v0.0.47.tgz  vald-helm-operator-v0.0.48.tgz  vald-helm-operator-v0.0.49.tgz  vald-helm-operator-v0.0.50.tgz  vald-helm-operator-v0.0.51.tgz  vald-helm-operator-v0.0.52.tgz  vald-helm-operator-v0.0.53.tgz  vald-helm-operator-v0.0.54.tgz  vald-helm-operator-v0.0.55.tgz  vald-helm-operator-v0.0.56.tgz  (+173 more)
cmd/: doc.go
common/: script.js  style.css
css/: footer.css  footer.min.css  header.css  header.min.css  main.css  main.min.css  style.css  style.min.css
design/: Vald Architecture Assets.drawio  Vald Architecture Basic.drawio  Vald Architecture Dataflow.drawio  Vald Architecture Overview.drawio
dockers/: template.md
docs/: index.html
hack/: CHANGELOG-README.template.md  CHANGELOG.template.md  doc.go  go.mod.default  go.tools
hack/e2e/benchmark/libs/vald/: setup.cfg  setup.py  src
internal/: doc.go
js/: script.js  script.min.js
pkg/: doc.go
resources/: GO_VERSION  NGT_VERSION
rust/: Cargo.toml  benchmark.csv  benchmark.ipynb  key_sensitive.csv  range.csv  rust-toolchain  rust-toolchain.toml
rust/libs/algorithm/: Cargo.toml
rust/libs/algorithm/src/: base.rs  error.rs  lib.rs  ngt.rs
rust/libs/kvs/: Cargo.toml  monotonic.csv  parallel.csv
rust/libs/kvs/benches/: criterion.rs  criterion_benchmark.rs  divan.rs  divan_benchmark.rs  hand_written.rs  kvs_benchmark.rs  kvs_impl.rs  stress.rs  util.rs  visualize.rs
rust/libs/kvs/src/: bidimap.rs  bidirectional_map.rs  codec.rs  config.rs  error.rs  integration_tests.rs  kvs.rs  lib.rs  map.rs  types.rs  unidirectional_map.rs  unimap.rs
rust/libs/kvs/src/map/: base.rs  bidirectional_map.rs  codec.rs  error.rs  types.rs  unidirectional_map.rs
rust/libs/observability/: Cargo.toml
rust/libs/observability/src/: config.rs  error.rs  lib.rs  macros.rs  observability.rs  tracing.rs
rust/libs/proto/: Cargo.toml  build.rs  wkt.proto
rust/libs/proto/src/: core.v1.tonic.rs  discoverer.v1.tonic.rs  embedder.v1.tonic.rs  filter.egress.v1.tonic.rs  filter.ingress.v1.tonic.rs  lib.rs  manager.index.v1.tonic.rs  meta.v1.tonic.rs  mirror.v1.tonic.rs  payload.v1.rs  rpc.v1.rs  rpc.v1.tonic.rs  sidecar.v1.rs  sidecar.v1.tonic.rs  vald.v1.tonic.rs
rust/libs/proto/src/core/: mod.rs
rust/libs/proto/src/core/v1/: core.v1.tonic.rs  mod.rs
rust/libs/proto/src/discoverer/v1/: discoverer.v1.tonic.rs  mod.rs
rust/libs/proto/src/embedder/v1/: embedder.v1.rs  embedder.v1.serde.rs  embedder.v1.tonic.rs
rust/libs/proto/src/errorpb/: errorpb.rs
rust/libs/proto/src/filter/: mod.rs
rust/libs/proto/src/filter/egress/v1/: filter.egress.v1.tonic.rs  mod.rs
rust/libs/proto/src/filter/ingress/v1/: filter.ingress.v1.tonic.rs  mod.rs
rust/libs/proto/src/google/: mod.rs
rust/libs/proto/src/google/rpc/: mod.rs  status.rs
rust/libs/proto/src/kvrpcpb/: kvrpcpb.rs
rust/libs/proto/src/meta/: mod.rs
rust/libs/proto/src/meta/v1/: meta.v1.tonic.rs  mod.rs
rust/libs/proto/src/metapb/: metapb.rs  metapb.serde.rs
rust/libs/proto/src/mirror/v1/: mirror.v1.tonic.rs  mod.rs
rust/libs/proto/src/payload/v1/: mod.rs  payload.v1.rs  payload.v1.serde.rs
rust/libs/proto/src/pdpb/: pdpb.rs  pdpb.serde.rs  pdpb.tonic.rs
rust/libs/proto/src/rpc/v1/: mod.rs  rpc.v1.rs  rpc.v1.serde.rs  rpc.v1.tonic.rs
rust/libs/proto/src/sidecar/v1/: mod.rs  sidecar.v1.tonic.rs
rust/libs/proto/src/tikv/: tikv.rs  tikv.serde.rs  tikv.tonic.rs
rust/libs/proto/src/tikvpb/: tikvpb.tonic.rs
rust/libs/proto/src/vald/v1/: mod.rs  vald.v1.tonic.rs
rust/libs/vqueue/: Cargo.toml
rust/libs/vqueue/src/: lib.rs
tags/: index.html  index.xml
vald/: Chart.yaml  (+5 more)
vald-agent-rs/: Cargo.toml
(+5271 files in other folders)
