[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"

[dev-dependencies]
chrono = "0.4.38"
criterion = { version = "0.5.1", features = ["html_reports"] }
divan = "0.1.14"
fs_extra = "1.3.0"
kv = "0.24.0"
num = "0.4.3"
persy = "1.5.0"
pickledb = "0.5.1"
plotters = "0.3.6"
polars = { version = "0.41.3", features = ["lazy"] }
procfs = "0.16.0"
rand = "0.8.5"
redb = "2.1.1"
rkv = "0.19.0"
rocksdb = "0.22.0"
sled = "0.34.7"
tempfile = "3.10.1"

[[bench]]
name = "divan"
harness = false

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "hand_written"
harness = false

[[bench]]
name = "stress"
harness = false

[[bench]]
name = "visualize"
harness = false
