#
# Copyright (C) 2019-2026 vdaas.org vald team <vald@vdaas.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# You may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "vqueue"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0"
thiserror = "2.0"
moka = { version = "0.12", features = ["future"] }
wincode = { version = "0.4.1", features = ["derive"] }


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
