[metadata]
name = vald

[options]
zip_safe = False
package_dir =
    agent=src/agentpython
    backup_manager=src/backup_manager
    discoverer=src/discoverer
    egress_filter=src/egress_filter
    ingress_filter=src/ingress_filter
    meta_manager=src/meta_manager
    payload=src/payload
    replication_manager=src/replication_manager
    traffic_manager=src/traffic_manager
    vald=src/vald
packages = find:
install_requires =
    grpcio
